--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,11 @@
 
 <body>
     <h1 class='title'>The VandyHacks V Hacker Guide</h1>
-    <p>This guide is a list of everything you need to know to be successful at VandyHacks!
-        For further questions, please contact us at ______________</p>
+    <p>This guide is a list of everything you need to know to have the best possible weekend
+        here at VandyHacks!
+    </p>
     <div id="content"></div>
     <script src='./js/main.js'></script>
-    <footer>
-        <p>This guide was last updated on 10/30/18</p>
-    </footer>
 </body>
 
 </html>
