--- a/mentor/index.html
+++ b/mentor/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks V Mentor Guide</h1>
+    <h1 class='title'>The VandyHacks VI Mentor Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
 </body>
