--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks V Hacker Guide</h1>
+    <h1 class='title'>The VandyHacks VI Hacker Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
 </body>
