--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Hacker Guide</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 
 <body>
