--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks: Summer Edition Hacker Guide</h1>
+    <h1 class='title'>The VandyHacks: Retro Edition Hacker Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
 </body>
