--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Hacker Guide</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="icon" type="image/png" href="./images/VH_Pixel_Logo.png"/>
 </head>
 
 <body>
