--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script>
         window.onload = () => {
             if(window.location.hash) {
-                window.location.hash.scrollIntoView();
+                document.getElementsByName(window.location.hash.replace("#", ""))[0].scrollIntoView();
             }
         };
     </script>
