--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
     <h1 class='title'>The VandyHacks: Retro Edition Hacker Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+    <script>
+        anchors.options = {
+            icon: "¶",
+            visible: "touch",
+            titleText: "Permalink to this headline"
+        }
+        anchors.add('h1, h2, h3');
+    </script>
     <script>
         window.onload = () => {
             if(window.location.hash) {
