minor text adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                 // event.preventDefault();
                 try {
                     await navigator.clipboard.writeText(el.href);
-                    console.log("copied link to clipboard ez");
+                    console.log("copied link to clipboard");
                     // el.innerHTML = "copied!";
                     // setTimeout(function () {el.innerHTML = ""}, 1000);
                 } catch (err) {
