--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                     // el.innerHTML = "copied!";
                     // setTimeout(function () {el.innerHTML = ""}, 1000);
                 } catch (err) {
-                    console.error("Sad! something fucky wucky: ", err);
+                    console.error("Sad! something fucky wucky oopsie woopsie: ", err);
                 }
             });
         });
