--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script>
         anchors.options = {
             icon: "¶",
-            visible: "touch",
+            visible: "hover",
             titleText: "Permalink to this headline"
         }
         anchors.add('h1, h2, h3');
