--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks: Retro Edition Hacker Guide</h1>
+    <h1 class='title'>The VandyHacks VII Hacker Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
