Apply updates from virtual to master (#36)
* Update hacker-guide.md

* Added non-profit externship part to the hacker guide

* Added DS_Store to gitignore

* Updated With Workshops per the schedule

* Updated Style

* forgot link

* better link desc.

* Incomplete changes to mentor guide

* Some more edits

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Initial upload of discord bot images

* Delete Screen Shot 2020-07-04 at 1.02.53 AM.png

* Delete Screen Shot 2020-07-04 at 1.03.46 AM.png

* Delete Screen Shot 2020-07-04 at 1.03.57 AM.png

* Delete Screen Shot 2020-07-04 at 1.04.39 AM.png

* Added discord bot images

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Fix devpost links

* Edited a newer version of virtual branch

* Delete ticket_logs.png

* Delete individual_ticket_channel.png

* Delete ticket_commands.png

* Delete ticket_channels.png

* Re-added mentorship bot images

* Update mentor-guide.md

* Delete ticket_commands.png

* Delete ticket_logs.png

* Delete individual_ticket_channel.png

* Add files via upload

* Update mentor-guide.md

* Delete ticket_commands.png

* Add files via upload

* Deleted DS_Store files

* Fix image display

* Lint document and remove duplicated text

* Update mentor-guide.md

* Update mentor-guide.md

* Update index.html

* udpate vandyhacks titles

* Text changes for ticket bot

* Add files via upload

* Update hacker-guide.md

* remove mention of dms

* remove dm from mentor guide

* Initial draft for VH VII

* Update mentor-guide.md

* Update mentor-guide.md

* still needs revision from content and/or marketing and/or ops

* Update index.html

* Fix guide title

* customize to fall

* potentially fix table of contents

lmao

* remove tag inconsistencies

sigh

* Add favicon

* Updat

--- a/mentor/index.html
+++ b/mentor/index.html
@@ -8,9 +8,25 @@
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks VI Mentor Guide</h1>
+    <h1 class='title'>The VandyHacks VII Mentor Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+    <script>
+      anchors.options = {
+        icon: "¶",
+        visible: "hover",
+        titleText: "Permalink to this headline"
+      }
+      anchors.add('h1, h2, h3');
+    </script>
+    <script>
+      window.onload = () => {
+        if(window.location.hash) {
+          document.getElementsByName(window.location.hash.replace("#", ""))[0].scrollIntoView();
+        }
+      };
+    </script>
 </body>
 
 </html>
