--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,29 @@
     <meta charset="utf-8" />
     <title>Hacker Guide</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="icon" type="image/png" href="./images/VH_Pixel_Logo.png"/>
 </head>
 
 <body>
-    <h1 class='title'>The VandyHacks VI Hacker Guide</h1>
+    <h1 class='title'>The VandyHacks VII Hacker Guide</h1>
     <div id="content"></div>
     <script src='./js/main.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
+    <script>
+        anchors.options = {
+            icon: "¶",
+            visible: "hover",
+            titleText: "Permalink to this headline"
+        }
+        anchors.add('h1, h2, h3');
+    </script>
+    <script>
+        window.onload = () => {
+            if(window.location.hash) {
+                document.getElementsByName(window.location.hash.replace("#", ""))[0].scrollIntoView();
+            }
+        };
+    </script>
 </body>
 
 </html>
